--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -47,7 +47,7 @@
                                 <div class="file-container" th:each="num: ${#numbers.sequence(1,2)}">
                                     <div class="custom-file img-div">
                                         <input type="file" class="custom-file-input" name="itemImgFile">
-                                        <label class="custom-file-label" th:text="상품이미지 + ${num}"></label>
+                                        <label class="custom-file-label" th:text="첨부파일 + ${num}"></label>
                                     </div>
                                 </div>
                             </div>
@@ -57,7 +57,7 @@
                                     <div class="custom-file img-div">
                                         <input type="file" class="custom-file-input" name="itemImgFile">
                                         <input type="hidden" name="itemImgIds" th:value="${FileDto.fileId}">
-                                        <label class="custom-file-label" th:text="${not #strings.isEmpty(FileDto.oriFileNm)} ? ${FileDto.oriFileNm} : '상품이미지' + ${status.index+1}"></label>
+                                        <label class="custom-file-label" th:text="${not #strings.isEmpty(FileDto.oriFileNm)} ? ${FileDto.oriFileNm} : '첨부파일' + ${status.index+1}"></label>
                                     </div>
                                 </div>
                             </div>
