--- a/src/main/resources/templates/contentview.html
+++ b/src/main/resources/templates/contentview.html
@@ -7,29 +7,32 @@
     <title>게시판 상세페이지</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
+
 </head>
 <body>
 <header th:insert="fragments/header.html"></header>
-
-<div layout:fragment="content" style="margin-left:25%;margin-right:25%">
+<img src="../img/home.png" alt="home image" width="120" height="80" />
+<div layout:fragment="content">
 
     <input type="hidden" id="BoardId" th:value="${boardDto.boardId}">
 
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-<!--                <form role="form" method="post" enctype="multipart/form-data" th:object="${BoardFormDto}">-->
-                <form role="form" method="post" enctype="multipart/form-data">
+                <div role="form" method="post" enctype="multipart/form-data">
                     <div class="form-container">
 
                         <div class="form-group">
-                            <label th:for="inputTitle"><strong>제목</strong></label>
-                            <label th:text="${boardDto.title}"></label>
+                            <div class="title-container">
+                                <label th:for="inputTitle"><strong>제목</strong></label>
+                                <button type="button" class="btn btn-primary like-button" onclick="likeButtonClick()">❤</button>
+                            </div>
+                            <input type="text" name="title" class="form-control" id="inputTitle" th:value="${boardDto.title}" />
                         </div>
 
                         <div class="form-group">
-                            <label th:for="inputContent"><strong>내용</strong></label>
-                            <p class="form-control" aria-label="With textarea" th:text="${boardDto.content}" name="content" id="inputContent" rows="5"></p>
+                            <label for="inputContent"><strong>내용</strong></label>
+                            <p class="form-control my-textarea" aria-label="With textarea" th:text="${boardDto.content}" name="content" id="inputContent" rows="5"></p>
                         </div>
 
                         <div class="form-group">
@@ -39,54 +42,76 @@
                                 <button type="button" class="btn btn-primary btn-add">+</button>
                             </div>
                         </div>
+                    <!-- 댓글 목록 -->
+                        <div class="form-group">
+                            <label for="commentList"><strong>댓글 목록</strong></label>
+                            <div class="comment-list-container">
+                                <ul id="commentList">
+                                    <!-- 댓글 목록을 나타낼 li 태그들을 동적으로 추가 -->
+                                </ul>
+                            </div>
+                        </div>
 
+                        <!-- 댓글 부분 -->
+                        <div class="form-group">
+                            <label for="inputComment"><strong>댓글</strong></label>
+                            <div class="comment-container">
+                                <input type="text" name="comment" class="form-control comment-input" id="inputComment" />
+                                <button type="button" class="btn btn-primary btn-comment btn-sm">댓글달기</button>
+                            </div>
+                        </div>
 
-<!--                        <div class="form-group">-->
-<!--                            <div th:if="${#lists.isEmpty(BoardFormDto.fileDtoList)}">-->
-<!--                                <label th:for="inputFile"><strong>파일 첨부</strong></label>-->
-<!--                                <div class="file-container" th:each="num: ${#numbers.sequence(1,2)}">-->
-<!--                                    <div class="custom-file img-div">-->
-<!--                                        <input type="file" class="custom-file-input" name="itemImgFile">-->
-<!--                                        <label class="custom-file-label" th:text="상품이미지 + ${num}"></label>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-
-<!--                            <div th:if = "${not #lists.isEmpty(BoardFormDto.fileDtoList)}">-->
-<!--                                <div class="form-group" th:each="FileDto, status: ${BoardFormDto.fileDtoList}">-->
-<!--                                    <div class="custom-file img-div">-->
-<!--                                        <input type="file" class="custom-file-input" name="itemImgFile">-->
-<!--                                        <input type="hidden" name="itemImgIds" th:value="${FileDto.fileId}">-->
-<!--                                        <label class="custom-file-label" th:text="${not #strings.isEmpty(FileDto.oriFileNm)} ? ${FileDto.oriFileNm} : '상품이미지' + ${status.index+1}"></label>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                        <div class="form-group">-->
-<!--                            <label for="inputFile"><strong>파일 첨부</strong></label>-->
-<!--                            <div class="file-container">-->
-<!--                                <input type="text" name="file-path" class="form-control file-path" id="inputFile" readonly />-->
-<!--                                <button type="button" class="btn btn-primary btn-file">파일 첨부</button>-->
-
-<!--                                <button type="button" class="btn btn-primary btn-add" id="addButton">+</button>-->
-<!--                                <button type="button" class="btn btn-danger btn-remove" id="removeButton">-</button>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-
-                        <div class="form-group text-center">
-                            <button type="button" onclick="location.href='/hbrg/ex01/${boardDto.boardId}'" class="btn btn-primary writeButton">수정</button>
-<!--                            <button type="button" onclick="location.href='/hbrg/ex01/' + boardId" class="btn btn-primary writeButton">수정</button>-->
-
-                            <!--                            th:href="@{/hbrg/ex02/{boardId}(boardId=${boardDto.boardId})}"-->
-                            <button onclick="location.href='/'" type="button" class="btn btn-secondary cancelButton">삭제</button>
+                        <!-- 페이지 수정 삭제-->
+                        <div class="form-group">
+                            <div class="btn-margin">
+                                <button type="button" class="btn btn-primary writeButton"><a th:href="@{/hbrg/ex01/{boardId}(boardId=${boardDto.boardId})}">수정</a></button>
+                                <button onclick="location.href='/'" type="button" class="btn btn-secondary cancelButton">삭제</button>
+                                <button onclick="location.href='/'" type="button" class="btn btn-secondary listButton">목록</button>
+                            </div>
                         </div>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
 </div>
+</div>
+
+<script>
+// 내용
+var textarea = document.querySelector(".my-textarea");
+
+textarea.addEventListener("input", function(){
+  this.style.height = "auto";
+  this.style.height = (this.scrollHeight) + "px";
+});
+
+
+
+function likeButtonClick() {
+  var btn = document.querySelector(".like-button");
+  btn.classList.toggle("active");
+}
+
+  // 게시글 ID 가져오기
+  var boardId = document.querySelector('#BoardId').value;
+
+  // 좋아요 요청 보내기
+  fetch('/like/' + boardId, { method: 'POST' })
+    .then(response => response.json())
+    .then(data => {
+      // 좋아요 버튼 텍스트 업데이트
+      var btnLike = document.querySelector('.like-button');
+      if (data.liked) {
+        btnLike.textContent = '취소하기';
+      } else {
+        btnLike.textContent = '좋아요';
+      }
+    })
+    .catch(error => console.error(error));
+}
+
+
+</script>
 </body>
 </html>
