--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -38,12 +38,12 @@
         </form>
 
         <!-- 테이블 부분 -->
-        <div class="table-container">
+        <div class="table-container " style="overflow-x: hidden; text-align: center; margin: 0 auto;" >
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class="table-responsive" style="margin-top: 50px;">
+                    <div class="table-responsive" style="margin-top: 50px;" >
                         <button class="btn btn-primary float-right" id="dMB3" onclick="location.href='/hbrg/ex01'">글쓰기</button>
-                        <table class="table table-striped">
+                        <table class="table table-striped" style="table-layout: fixed; width: 100%;">
                             <thead>
                             <tr>
                                 <th>
@@ -114,29 +114,28 @@
                         </table>
                     </div>
                 </div>
-
-                <!-- 페이지 버튼 -->
-                <div class="pagination justify-content-center" style="margin-top: 100px;">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="#" tabindex="-1">이전</a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">4</a></li>
-                            <li class="page-item"><a class="page-link" href="#">5</a></li>
-                            <li class="page-item"><a class="page-link" href="#">6</a></li>
-                            <li class="page-item"><a class="page-link" href="#">7</a></li>
-                            <li class="page-item"><a class="page-link" href="#">8</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="#">다음</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
             </div>
+        </div>
+        <!-- 페이지 버튼 -->
+        <div class="pagination justify-content-center" style="margin-top: 100px;">
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">이전</a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item"><a class="page-link" href="#">6</a></li>
+                    <li class="page-item"><a class="page-link" href="#">7</a></li>
+                    <li class="page-item"><a class="page-link" href="#">8</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#">다음</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </form>
 </div>
