23/04/17 16:22 페이징 처리 구현

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -102,10 +102,12 @@
                             </tr>
                             </thead>
 
+                            <!--  페이징 처리 추가 23/04/17 16:22 status : ${list}로 변경 -->
+                            <!--  title 부분 href 추가 <a th:href="@{/hbrg/ex02/{boardId}(boardId=${boardDto.boardId})}" th:text="${boardDto.title}"></a> -->
                             <tbody>
-                            <tr th:each="boardDto, status: ${boardList}">
+                            <tr th:each="boardDto, status: ${list}">
                                 <td><a th:href="@{/hbrg/ex02/{boardId}(boardId=${boardDto.boardId})}" th:text="${boardDto.boardId}"></a></td>
-                                <td><a th:href="@{/hbrg/ex02/{boardId}(boardId=${boardDto.boardId})}"  th:text="${boardDto.title}"></a></td>
+                                <td><a th:href="@{/hbrg/ex02/{boardId}(boardId=${boardDto.boardId})}" th:text="${boardDto.title}"></a></td>
                                 <td th:text="${boardDto.vC}"></td>
                                 <td th:text="${boardDto.bLike}"></td>
                                 <td th:text="${boardDto.cDate}"></td>
@@ -113,28 +115,22 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
 
-                <!-- 페이지 버튼 -->
-                <div class="pagination justify-content-center" style="margin-top: 100px;">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="#" tabindex="-1">이전</a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item"><a class="page-link" href="#">4</a></li>
-                            <li class="page-item"><a class="page-link" href="#">5</a></li>
-                            <li class="page-item"><a class="page-link" href="#">6</a></li>
-                            <li class="page-item"><a class="page-link" href="#">7</a></li>
-                            <li class="page-item"><a class="page-link" href="#">8</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="#">다음</a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <!--  페이징 처리 추가 23/04/17 16:22 -->
+                    <ul class="pagination">
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#" tabindex="-1">이전</a>
+                        </li>
+
+                            <th:block th:each="page:${#numbers.sequence(startPage,endPage)}">
+                                <li class="page-item"><a class="page-link" th:if="${page != nowPage}" th:href="@{/(page=${page-1})}" th:text ="${page}"></a></li>
+                                <li class="page-item"><strong class="page-link" th:if="${page==nowPage}" th:text ="${page}" style="font-style:bold"></strong></li>
+                            </th:block>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="#">다음</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
