--- a/src/main/resources/templates/contentView.html
+++ b/src/main/resources/templates/contentView.html
@@ -3,10 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 <head>
-    <meta charset="UTF-8" />
-    <title>게시판 상세페이지</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+  <meta charset="UTF-8" />
+  <title>게시판 상세페이지</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
 </head>
 <body>
@@ -14,66 +14,66 @@
 <img src="../img/home.png" alt="home image" width="120" height="80" />
 <div layout:fragment="content">
 
-    <input type="hidden" id="BoardId" th:value="${boardDto.boardId}">
+  <input type="hidden" id="BoardId" th:value="${boardDto.boardId}">
 
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div role="form" method="post" enctype="multipart/form-data">
-                    <div class="form-container">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div role="form" method="post" enctype="multipart/form-data">
+          <div class="form-container">
 
-                        <div class="form-group">
-                            <div class="title-container">
-                                <label th:for="inputTitle"><strong>제목</strong></label>
-                                <button type="button" class="btn btn-primary like-button" onclick="likeButtonClick()">❤</button>
-                            </div>
-                            <input type="text" name="title" class="form-control" id="inputTitle" th:value="${boardDto.title}" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="inputContent"><strong>내용</strong></label>
-                            <p class="form-control my-textarea" aria-label="With textarea" th:text="${boardDto.content}" name="content" id="inputContent" rows="5"></p>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="inputHashtag" ><strong>해시태그</strong></label>
-                            <div class="hashtag-container">
-                                <input type="text" name="hashtag" class="form-control hashtag-input" id="inputHashtag" />
-                                <button type="button" class="btn btn-primary btn-add">+</button>
-                            </div>
-                        </div>
-                    <!-- 댓글 목록 -->
-                        <div class="form-group">
-                            <label for="commentList"><strong>댓글 목록</strong></label>
-                            <div class="comment-list-container">
-                                <ul id="commentList">
-                                    <!-- 댓글 목록을 나타낼 li 태그들을 동적으로 추가 -->
-                                </ul>
-                            </div>
-                        </div>
-
-                        <!-- 댓글 부분 -->
-                        <div class="form-group">
-                            <label for="inputComment"><strong>댓글</strong></label>
-                            <div class="comment-container">
-                                <input type="text" name="comment" class="form-control comment-input" id="inputComment" />
-                                <button type="button" class="btn btn-primary btn-comment btn-sm">댓글달기</button>
-                            </div>
-                        </div>
-
-                        <!-- 페이지 수정 삭제-->
-                        <div class="form-group">
-                            <div class="btn-margin">
-                                <button type="button" class="btn btn-primary writeButton"><a th:href="@{/hbrg/ex01/{boardId}(boardId=${boardDto.boardId})}">수정</a></button>
-                                <button onclick="location.href='/'" type="button" class="btn btn-secondary cancelButton">삭제</button>
-                                <button onclick="location.href='/'" type="button" class="btn btn-secondary listButton">목록</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="form-group">
+              <div class="title-container">
+                <label th:for="inputTitle"><strong>제목</strong></label>
+                <button type="button" class="btn btn-primary like-button" onclick="likeButtonClick()">❤</button>
+              </div>
+              <input type="text" name="title" class="form-control" id="inputTitle" th:value="${boardDto.title}" />
             </div>
+
+            <div class="form-group">
+              <label for="inputContent"><strong>내용</strong></label>
+              <p class="form-control my-textarea" aria-label="With textarea" th:text="${boardDto.content}" name="content" id="inputContent" rows="5"></p>
+            </div>
+
+            <div class="form-group">
+              <label for="inputHashtag" ><strong>해시태그</strong></label>
+              <div class="hashtag-container">
+                <input type="text" name="hashtag" class="form-control hashtag-input" id="inputHashtag" />
+                <button type="button" class="btn btn-primary btn-add">+</button>
+              </div>
+            </div>
+            <!-- 댓글 목록 -->
+            <div class="form-group">
+              <label for="commentList"><strong>댓글 목록</strong></label>
+              <div class="comment-list-container">
+                <ul id="commentList">
+                  <!-- 댓글 목록을 나타낼 li 태그들을 동적으로 추가 -->
+                </ul>
+              </div>
+            </div>
+
+            <!-- 댓글 부분 -->
+            <div class="form-group">
+              <label for="inputComment"><strong>댓글</strong></label>
+              <div class="comment-container">
+                <input type="text" name="comment" class="form-control comment-input" id="inputComment" />
+                <button type="button" class="btn btn-primary btn-comment btn-sm">댓글달기</button>
+              </div>
+            </div>
+
+            <!-- 페이지 수정 삭제-->
+            <div class="form-group">
+              <div class="btn-margin">
+                <button type="button" class="btn btn-primary writeButton" th:href="@{'/hbrg/ex01/'+${boardDto.boardId}}" onclick="location.href=this.getAttribute('href')">수정</button>
+                <button onclick="location.href='/'" type="button" class="btn btn-secondary cancelButton">삭제</button>
+                <button onclick="location.href='/'" type="button" class="btn btn-secondary listButton">목록</button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 </div>
 
