23/04/17 조회수, 페이징
페이징 오류 수정 및 조회수 기능 추가

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -121,7 +121,7 @@
                         </li>
                         <th:block th:each="page:${#numbers.sequence(startPage,endPage)}">
                             <li class="page-item">
-                                <a class="page-link" th:if="${page != nowPage}" th:href="@{/(page=${page})}" th:text="${page}"></a>
+                                <a class="page-link" th:if="${page != nowPage}" th:href="@{/(page=${page-1})}" th:text="${page}"></a>
                                 <strong class="page-link" th:if="${page == nowPage}" th:text="${page}" style="font-style:bold"></strong>
                             </li>
                         </th:block>
