--- a/src/main/resources/templates/contentview.html
+++ b/src/main/resources/templates/contentview.html
@@ -27,7 +27,7 @@
                 <label th:for="inputTitle"><strong>제목</strong></label>
                 <button type="button" class="btn btn-primary like-button" onclick="likeButtonClick()">❤</button>
               </div>
-              <input type="text" name="title" class="form-control" id="inputTitle" th:value="${boardDto.title}" />
+              <input type="text" name="title" class="form-control" id="inputTitle" th:value="${boardDto.title}" readonly />
             </div>
 
             <div class="form-group">
